--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,92 @@
 
 <html>
   <head>
+    <meta lang="es">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-    <title>UOC Boilerplate</title>
   </head>
   <body>
-    <div class="uoc-container">
-      <picture>
-        <source srcset="./assets/images/logo.png?as=webp&width=350" type="image/webp" />
-        <img src="./assets/images/logo.png?width=350" alt="Universitat Oberta de Catalunya" class="uoc-logo" />
-      </picture>
-      <h1 class="uoc-title">Hello, UOC!</h1>
-      <p>
-        This is a starter template for the Advanced HTML and CSS Tools courses
-        from the Master's Program in Multimedia Applications and the Master's
-        Program in Web App and Website Development at the Universitat Oberta de
-        Catalunya.
-      </p>
-    </div>
-    <include src="./views/footer.html"></include>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+        <img src="./assets/images/logo.png?width=350" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="./us.html">Sobre nosotros</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="./article.html">Noticias</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="./form.html">Contacto</a>
+          </li>
+        </ul>
+        </div>
+      </div>
+      </nav>
+      <div class="poster">
+        <picture>
+          <source srcset="./assets/images/logo.png?as=webp&width=350" type="image/webp" />
+          <img src="./assets/images/logo.png?width=350" alt="Universitat Oberta de Catalunya" class="uoc-logo" />
+        </picture>
+        <h1 class="h1poster">Próximo torneo de Ajedrez</h1>
+        <div class="grid-container">
+          <div class="info">
+            <div class="card">
+              <h2 class="card-title">Fecha:</h2>
+              <p class="card-text">25 de mayo, 2023</p>
+            </div>
+            <div class="card">
+              <h2 class="card-title">Lugar:</h2>
+              <p class="card-text">Palacio de los Deportes</p>
+            </div>
+          </div>
+          <img src="./assets/images/jugador-de-ajedrez.jpg" alt="fichas de ajedrez" class="img-poster">
+        </div>
+        <p class="pposter">
+          ¡No te pierdas nuestro próximo torneo de ajedrez! Demuestra tus habilidades en el tablero y compite contra jugadores de todo el mundo. Regístrate ahora y prepárate para el desafío.
+        </p>
+      </div>
+      
+
+    <footer class="bg-light py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./assets/images/logo.png?width=350" alt="Logo de la página" class="img-fluid mb-3">
+          </div>
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li><a href="./index.html">Inicio</a></li>
+              <li><a href="./us.html">Sobre nosotros</a></li>
+              <li><a href="./article.html">Noticias</a></li>
+              <li><a href="./form.html">Contacto</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <div class="d-flex">
+              <a href="#">
+                <i class="bi bi-facebook"></i></a>
+              <a href="#">
+                <i class="bi bi-instagram"></i></a>
+              <a href="#">
+                <i class="bi bi-twitter"></i>              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
