--- a/src/form.html
+++ b/src/form.html
@@ -34,7 +34,7 @@
         </div>
         </nav>
 
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact" method="POST"  netlify data-netlify="true">
             <div class="form-group">
               <label for="name">Nombre:</label>
               <input type="text" name="name" id="name" required>
